testsuite/vir/error/error.vir
func @main(): i32
  $a = const i32 99
  $ref = ref $a 0
  ret $a
